[gd_scene load_steps=4 format=3 uid="uid://c1vbi6b01jidb"]

[ext_resource type="Script" path="res://shared/scripts/pause_menu.gd" id="1_qgdg2"]
[ext_resource type="Theme" uid="uid://ccdfqfq2wd0rn" path="res://resource/themes/button_theme.tres" id="1_u7bcs"]
[ext_resource type="PackedScene" uid="uid://b8oa1upccw513" path="res://shared/scenes/settings_menu.tscn" id="3_a6naj"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1104.0
offset_top = -1.0
offset_bottom = -568.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgdg2")

[node name="PauseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 1.0
offset_right = -5.0
offset_bottom = 51.0
grow_horizontal = 0
theme = ExtResource("1_u7bcs")
text = "||"

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1104.0
offset_bottom = 567.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "JUEGO EN PAUSA"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -126.0
offset_right = 153.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Button" type="Button" parent="Menu/VBoxContainer/Continue"]
layout_mode = 2
theme = ExtResource("1_u7bcs")
theme_override_font_sizes/font_size = 32
text = " CONTINUAR "

[node name="Save" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="SaveButton" type="Button" parent="Menu/VBoxContainer/Save"]
layout_mode = 2
theme = ExtResource("1_u7bcs")
theme_override_font_sizes/font_size = 32
text = " GUARDAR "

[node name="Menu" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Button2" type="Button" parent="Menu/VBoxContainer/Menu"]
layout_mode = 2
theme = ExtResource("1_u7bcs")
theme_override_font_sizes/font_size = 32
text = "MENU"

[node name="Settings" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="SettingButton" type="Button" parent="Menu/VBoxContainer/Settings"]
layout_mode = 2
theme = ExtResource("1_u7bcs")
theme_override_font_sizes/font_size = 32
text = "CONFIGURACION"

[node name="Quit" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Button4" type="Button" parent="Menu/VBoxContainer/Quit"]
layout_mode = 2
theme = ExtResource("1_u7bcs")
theme_override_font_sizes/font_size = 32
text = " SALIR "

[node name="SettingsMenu" parent="." instance=ExtResource("3_a6naj")]
visible = false
layout_mode = 1
offset_left = -1104.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 566.0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Continue/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Save/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Menu/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit/Button4" to="." method="_on_button_4_pressed"]
[connection signal="closed" from="SettingsMenu" to="." method="_on_settings_menu_closed"]
